FIX: contact form message response text alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -439,9 +439,10 @@ footer a:hover {
   visibility: hidden;
   color: white;
   position: absolute;
-  margin-top: 15px;
   margin-left: 15px;
   font-weight: 500;
+  line-height: 50px;
+  margin-bottom: 0;
 }
 
 @keyframes pop-down {
